Enabling_04_html/styles/Enabling_04_dliLearn.css
.noSelect{
  -webkit-user-select: none;  /* Chrome all / Safari all */
  -moz-user-select: none;     /* Firefox all */
  -ms-user-select: none;      /* IE 10+ */

  /* No support for these yet, use at own risk */
  -o-user-select: none;
  user-select: none;          
}

#carousel1 div img{
    width: 100px;
    height: 100px;
}

#clickGuard {
    background-color: grey;
    display: none;
    height: 490px;
    left: 0;
    opacity: 0.2;
    position: absolute;
    top: 0;
    width: 840px;
    z-index: 99;
}

* {
    -moz-box-sizing: inherit;
	-webkit-box-sizing: initial;
	box-sizing: content-box;
}

.activity_description {
    display: block;
    font-family: inherit;
    font-size: 12px;
    letter-spacing: 2px;
    margin-bottom: 20px;
    margin-left: 6px;
    margin-top: -19px;
    max-width: 830px;
}
.activity_hd {
    color: grey;
    display: block;
    font-family: inherit;
    font-size: 22px;
    margin-left: 26px;
    margin-top: -2px;
}
html body {
    background-color: #F5F5F5;
    color: #444444;
    font-family: Arial,Helvetica,sans-serif;
    letter-spacing: 2px;
    line-height: 20px;
    position: absolute;
}
.roundCorners {
    border-radius: 0 0 0 0;
}

#feedbackHeader {
    margin: 1px;
    font-size: 20px;
    letter-spacing: 2px;
	padding:10px 0px 0px 10px;
}
#feedbackText {
	margin:0px;
    overflow: auto;
    padding:0px 10px 0px 10px;
}
#feedbackBtn {
    bottom: 10px;
    position: absolute;
    right: 10px;
}

#main{
	position: relative;
}

#prevBtnDiv {
	left: 8px;
    position: absolute;    
	top: 56px;
}

#nextBtnDiv {
	left: 793px;
    position: absolute;
    
    top: 56px;
}


#selectedImageDiv{
    border-radius: 3px;
    box-shadow: inset 0px 1px 8px grey;
    border: 1px solid lightgray;
    background: url("../../common/img/bg_dropbubble_50.png") repeat-x scroll center bottom #F5F5F5;
    left: 335px;
    position: absolute;
    top: 7px;
    z-index: 1000;
}

#selectedImage{
    width: 160px;
}

#wordContainer {
    background: url("../../common/img/bg_dropbubble_50.png") repeat-x scroll center bottom #F5F5F5;
    left: 10px;
    border-radius: 3px;
    box-shadow: inset 0px 1px 11px grey;
    height: 61px;
    position: absolute;
    top: 178px;
    width: 504px;
    padding-top: 2px;
}

#feedback{
	-moz-user-select: none;
    background: url("../../common/img/bg_dropbubble_50.png") repeat-x scroll center bottom #F5F5F5;
    border: 1px solid #BDBDBD;
    border-radius: 3px 3px 3px 3px;
    box-shadow: 0 2px 4px #BDBDBD;
    display: block;
    margin: 0 0 0 7px;
    padding: 0px;
    position: absolute;
    width: 170px;
	min-height: 302px;
	max-height: 302px;
	width: 305px;
	left: 515px;
	z-index: 1002;
	top: 177px;
}

#word{
 	margin-top: 13px;
 	height: 37px;
 	font-size: 24px;
 	text-align: center;
 	position: absolute;
 	width: 503px;
 	padding: 5px;
}

.unhideText{
	border-style:solid;
	background-color: white;
	color: black;
	border-color: black;
	border-width: 1px;
}

.hideText{
	border-style:solid;
	background-color: white;
	color: white;
	border-color: black;
	border-width: 1px;
}

#keyboardContainer {
    box-shadow: 0 1px 0 0 #FFFFFF, 0 5px 11px 2px rgba(119, 119, 119, 0.4) inset;
    border: thin solid #B8B8B8;
    border-radius: 3px;
    background: url("../../common/img/bg_grip_pattern.png");
    height: 210px;
    left: 10px;
    padding-top: 10px;
    position: absolute;
    text-align: center;
    top: 260px;
    vertical-align: middle;
    width: 504px;
}



#selectedImageDiv > div {
    bottom: -4px;
    left: 2px;
    position: absolute;
}

.unselected{
	display:none;
}

.selected{
	display:block;
}

#carousel1 {
	width: 840px; 
    height: 128px;
	margin-left: 0px;
    overflow: scroll;
}

.cloudcarousel{
	border: 1px solid lightgray;
	border-radius: 3px;
	background: url("../../common/img/bg_dropbubble_50.png") repeat-x scroll center bottom #F5F5F5;

	box-shadow: 1px 1px 2px #BDBDBD;
}

#keyboard > button {
    color: #444444;
    background: url("../../common/img/bg_dropbubble_50.png") repeat-x scroll center bottom #F5F5F5;
    border: 1px solid lightgray;
    border-radius: 3px;
    cursor: pointer;
    float: left;
    font-size: 18px;
    height: 42px;
    margin: 2px;
    padding-top: 1px;
    text-align: center;
    width: 37px;
}

#keyboard{
    position: relative;
    left: 4px;
}

